@startuml
hide circle
skinparam classAttributeIconSize 0
class Dashboard {
    - expenseManager: ExpenseManager
    - eventManager: EventManager
    - fileManager: FileManager
    --
    + getExpenseManager(): ExpenseManager
    + getEventManager(): EventManager
    + getFileManager(): FileManager
}
abstract class command {
    --
    + execute(dashboard: Dashboard): void
}
class CategoryCommand {
    - subcommand: string
    - categoryString: string
    --
    + CategoryCommand(subcommand: string, categoryString: string)
    + CategoryCommand(subcommand: string)
    + execute(dashboard: Dashboard): void
   }
class AddCategoryFromFileCommand {
    --
    + execute(dashboard: Dashboard): void
}
class CategoryParser {
    + parseInput (userInput: string): Command
}
class GeneralFileParser
class Category {
     - categories: HashSet<String>
     --
     + addCategory(category: String): String
     + removeCategory(category: String): String
     + getCategoryListString(): String
}
AddCategoryFromFileCommand --|> command
CategoryCommand --|> command
Category --> "1"  Dashboard
CategoryParser -[dashed]-> CategoryCommand
CategoryCommand -[dashed]->  Category
AddCategoryFromFileCommand -[dashed]-> Category
GeneralFileParser -[dashed]-> AddCategoryFromFileCommand
@enduml